--- a/djangoproject/gestion_stock/templates/unitemanutentionentree.html
+++ b/djangoproject/gestion_stock/templates/unitemanutentionentree.html
@@ -10,7 +10,7 @@
 <div class="container">
     <div class="form-group row text-center">
         <div class="col">
-            <button type="button" id="back-row" class="btn btn-default btn-rounded btn-outline-dark">Tout</button>
+            <button type="button" id="tricol" class="btn btn-default btn-rounded btn-outline-dark">Trier colis libre</button>
         </div>
         <div class="col">
             <button type="button" id="create-row" class="btn btn-success btn-rounded btn-outline-dark">Ajouter</button>
@@ -87,6 +87,25 @@
 
     $("#create-row").click(function() {
         location.href = "{% url 'unitemanutentionentreeadd' %}";
+    });
+
+    $("#tricol").click(function() {
+        $.ajax({
+            type:"POST",    //type de requête utilisé par ajax
+            url:"/sort_cols/", //lien de la view qui gère la requête post pour trier les colis des um entree vers des bcs avec une ums ouverte
+            data: {
+                'token': "tries_des_colis",
+                csrfmiddlewaretoken: '{{ csrf_token }}'
+            },
+            success: function(msg, data, settings){
+                console.log("gg " + msg);
+                location.reload();
+            },
+            failure: function() {
+                console.log("fail");
+                location.reload();
+            }
+        });
     });
 
     $(document).on("click", "button.dyna" , function(e) { // event pour modifier les entree transporteur
