recalcule lbcs & trier via ume v2
2 commits le même jours par erreur

--- a/djangoproject/gestion_stock/static/css/style.css
+++ b/djangoproject/gestion_stock/static/css/style.css
@@ -220,7 +220,7 @@ table.dataTable thead .sorting_desc_disabled:before {
 
 .vertical-menu {
   width: 200px;
-  height: 450px;
+  height: 40vw;
   overflow-y: auto;
 }
 
