--- a/djangoproject/gestion_stock/templates/bonLivraisonSortie.html
+++ b/djangoproject/gestion_stock/templates/bonLivraisonSortie.html
@@ -1,203 +1,105 @@
-{% extends "base_generic.html" %}
+{% extends user.is_authenticated|yesno:"base_generic.html,empty.html" %}
 
 {% block content %}
 
-<style>
-    .ui-dialog-titlebar-close {
-        visibility: hidden;
-    }
-    input.text { margin-bottom:12px; width:95%; padding: .4em; }
-    fieldset { padding:0; border:0; margin-top:25px; }
-    .ui-dialog .ui-state-error { padding: .3em; }
-    .validateTips { border: 1px solid transparent; padding: 0.3em;}
-</style>
+<body>
 
-<div class="container"><h1 class="text-center"> Sortie Bon de Livraison</h1></div>
+<div class="container"><h1 class="text-center"> B.L <b>sortie</b></h1></div>
 <br>
 
 <div class="container">
     <div class="form-group row text-center">
+        <!--<div class="col">
+            <form method="post" novalidate enctype="multipart/form-data"  style="text-align: left;font-weight:bold;">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-success" style="position:sticky;bottom: 0; margin-left: 45%;">Import B.C</button>
+            {{ form.as_p }}
+        </form>
+        </div>-->
+    </div>
+</div>
+
+<div class="container">
+    <div class="row">
         <div class="col">
-            <button type="button" class="btn btn-light btn-rounded btn-outline-dark">Recherche</button>
-        </div>
-        <div class="col">
-            <button type="button" class="btn btn-default btn-rounded btn-outline-dark">Tout</button>
-        </div>
-        <div class="col">
-            <button type="button" id="create-row" class="btn btn-success btn-rounded btn-outline-dark">Ajouter</button>
-        </div>
-        <div class="col">
-            <button type="button" class="btn btn-default btn-rounded btn-outline-dark">Calculer</button>
+            <div class="border shadow-lg p-3 mb-5 bg-white rounded">
+                <div class="table-responsive">
+                    <table id="dtBasicExample" class="table table-striped table-bordered table-sm text-center" cellspacing="0" width="100%">
+                        <thead>
+                        <tr>
+                            <th scope="col" class="th-sm"> </th>
+                            <th scope="col" class="th-sm"> code UM </th>
+                            <th scope="col" class="th-sm"> numéro Bl </th>
+                            <th scope="col" class="th-sm"> date création </th>
+                            <th scope="col" class="th-sm"> destinataire </th>
+                            <th scope="col" class="th-sm"> Quantité colis </th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for items in blsortie %}
+                        <tr>
+                            <td> <a href='{% url "bonLivraisonSortiemodify" %}?id={{items.idBonLivraisonSortie|safe }}'><button type="button" id='{{ items.idBonCommandeSortie }}' class="dyna btn btn-sm btn-outline-grey rounded"> <i class="fa fa-arrow-right"></i> </button></a></td>
+                            <td> {{ items.fk_BonCommandeSortie.fk_Destinataire.codeUM }} </td>
+                            <td> {{ items.idBonLivraisonSortie }} </td>
+                            <td> {{ items.c_horodatage }} </td>
+                            <td> {{ items.fk_BonCommandeSortie.fk_Destinataire.nom }} </td>
+                            <td> {{ items.qtecolis }} </td>
+                        </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
     </div>
 </div>
 
-<div class="container ">
-    <table id="myprvttable" class="table table-hover container rounded table-bordered border border-dark table-responsive-md">
-        <thead>
-        <tr>
-            <th>
-                <div class="col-md-2">
-                    <button type="button" class="btn btn-default btn-rounded">-></button>
-                </div>
-            </th>
-            <th scope="col" id="dos">code U.M</th>
-            <th scope="col" id="des">numéro BL</th>
-            <th scope="col" id="code">date création</th>
-            <th scope="col" id="date">destinataire</th>
-            <th scope="col" id="nuco">Quantité colis</th>
-        </tr>
-        <tbody>
-        {% for items in sortie %}
-        <tr>
-            <td>
-                <button type="button" class="mybut btn btn-default btn-rounded" id={{ items.id }}>-></button>
-            </td>
-            <td>
-                {{ items.fk_BonCommandeSortie.fk_Destinataire.codeUM }}
-            </td>
-            <td>
-                {{ items.numeroBonLivraison }}
-            </td>
-            <td>
-                {{ items.c_horodatage }}
-            </td>
-            <td>
-                {{ items.fk_BonCommandeSortie.fk_Destinataire.nom }}
-            </td>
-            {% for itemsligne in sortieligne %}
-            <td>
-                {{ itemsligne.quantiteColis }}
-            </td>
-            {% endfor %}
-        </tr>
-        {% endfor %}
-        </tbody>
-        </thead>
-    </table>
-</div>
-
-
+</body>
 <script type="text/javascript">
-    $(document).ready(function() {
-        var i = 0;
-        "{% for items in sortie %}"
-        var name = "{{ items.fk_Transporteur.nom }}";
-        var oldname;
-        if (i == 0)
-            $("#choiceTrans").append(new Option("{{ items.fk_Transporteur.nom }}", "1"));
-        else if (name != oldname)
-            $("#choiceTrans").append(new Option("{{ items.fk_Transporteur.nom }}", "1"));
-        oldname = name;
-        i = 1;
-        "{% endfor %}"
-
-        "{% for items in sortie %}"
-        var name = "{{ items.fk_Client.nom }}";
-        var oldname;
-        if (i == 0)
-            $("#client").append(new Option("{{ items.fk_Client.nom }}", "1"));
-        else if (name != oldname)
-            $("#client").append(new Option("{{ items.fk_Client.nom }}", "1"));
-        oldname = name;
-        i = 1;
-        "{% endfor %}"
-
-        "{% for items in sortie %}"
-        var name = "{{ items.fk_Destinataire.nom }}";
-        var oldname;
-        if (i == 0)
-            $("#destin").append(new Option("{{ items.fk_Destinataire.nom }}", "1"));
-        else if (name != oldname)
-            $("#destin").append(new Option("{{ items.fk_Destinataire.nom }}", "1"));
-        oldname = name;
-        i = 1;
-        "{% endfor %}"
+    $(document).ready(function () {
+        $('#dtBasicExample').DataTable();
+        $('.dataTables_length').addClass('bs-select');
+        $('#boncommandesortie').fadeTo("slow", 0.5);
     });
-</script>
 
+    $("#create-row").click(function() {
+        location.href = "{% url 'bonLivraisonSortieadd' %}";
+    });
 
-<script type="text/javascript">
-    $(document).ready(function() {
-        $('#bonlivraisonsortie').fadeTo("slow", 0.5);
-        var idx = 0;
-        var idDestinataire = 0;
-        var destinatairelist = [];
-        var ident = idx;//$("#identifiant");
-        var date = $("#datepicker");
-        var client = $("#client");
-        var destinataire = $("#destin");
-        var codeUm = $("#choiceUm");
-        var numcommande = $("#numcom");
-        $("#create-row").click(function() {
-            location.href = "{% url 'bonLivraisonSortieadd' %}";
-        });
-        var dos = document.getElementById("dos");
-        var des = document.getElementById("des");
-        var code = document.getElementById("code");
-        var date = document.getElementById("date");
-        var nuco = document.getElementById("nuco");
-        //var iden = document.getElementById("iden");
-        var term = document.getElementById("term");
-        dos.onclick = function() {
-            sortTable(1);
+    $(document).on("click", "button.dyna" , function(e) { // event pour modifier les entree transporteur
+        var idClicked = e.target.id;
+        var name = "";
+        var trueid = 0;
+        //alert(idClicked);
+        "{% for items in sortie %}"
+        if ('{{ items.idbonCommandeSortie }}' == idClicked) {
+            name = '{{ items.nom }}';
+            trueid = '{{ items.id }}';
         }
-        des.onclick = function() {
-            sortTable(2);
-        }
-        code.onclick = function() {
-            sortTable(2);
-        }
-        date.onclick = function() {
-            sortTable(3);
-        }
-        nuco.onclick = function() {
-            sortTable(4);
-        }
-        /*iden.onclick = function() {
-        sortTable(5);
-        }*/
-        /*term.onclick = function() {
-        sortTable(6);
-        }*/
-        function sortTable(n) {
-            console.log("switcy");
-            var table, rows, switching, i, x, y, shouldSwitch, dir, switchcount = 0;
-            table = document.getElementById('myprvttable');
-            switching = true;
-            dir = "asc";
-            while (switching) {
-                switching = false;
-                rows = table.rows;
-                for (i = 1; i < (rows.length - 1); i++) {
-                    shouldSwitch = false;
-                    x = rows[i].getElementsByTagName("TD")[n];
-                    y = rows[i + 1].getElementsByTagName("TD")[n];
-                    if (dir == "asc") {
-                        if (x.innerHTML.toLowerCase() > y.innerHTML.toLowerCase()) {
-                            shouldSwitch= true;
-                            break;
-                        }
-                    } else if (dir == "desc") {
-                        if (x.innerHTML.toLowerCase() < y.innerHTML.toLowerCase()) {
-                            shouldSwitch = true;
-                            break;
-                        }
-                    }
-                }
-                if (shouldSwitch) {
-                    rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
-                    switching = true;
-                    switchcount ++;
-                } else {
-                    if (switchcount == 0 && dir == "asc") {
-                        dir = "desc";
-                        switching = true;
-                    }
-                }
+        "{% endfor %}"
+        window.location.href = "{% url 'bonLivraisonSortiemodify' %}?id=" + idClicked + "&" + "name=" + name + "&" + "trueid=" + trueid;
+    });
+
+    $(document).on("click", "button.dynad" , function(e) { // event pour delete la ligne sélectionner
+        var idClicked = e.target.id;
+        alert(idClicked);
+        $.ajax({
+            type:"POST",    //type de requête utilisé par ajax
+            url:"/delete_bl_sortie/", //lien de la view qui gère la requête post pour supprimer une entree
+            data: {
+                'name': $('#nom').val(), // nom du transporteur récuperer dans le input #nom
+                'id': idClicked, // id du transporteur acquis grace a une incrementation en js
+                csrfmiddlewaretoken: '{{ csrf_token }}'
+            },
+            success: function(msg, data, settings){
+                console.log("gg " + msg);
+                location.reload();
+            },
+            failure: function() {
+                console.log("fail");
+                location.reload();
             }
-        }
+        });
     });
 </script>
-
 {% endblock %}
