--- a/djangoproject/gestion_stock/templates/bonLivraisonSortiemodify.html
+++ b/djangoproject/gestion_stock/templates/bonLivraisonSortiemodify.html
@@ -2,7 +2,7 @@
 {% block content %}
 <body>
 
-<div class="container"><h1 class="text-center"> Bon de commande sortie {{ id }}</h1></div>
+<div class="container"><h1 class="text-center"> Bon de Livraison sortie N°{{ id }}</h1></div>
 <br>
 
 <div class="container">
@@ -46,20 +46,20 @@
     <div class="row">
         <div class="col">
             <div class="border shadow-lg pl-2 mb-3 bg-white rounded" style="position:relative;">
+                <br>
                 <div class="row">
                     <div class="col"></div>
-                    <div class="col">
-                        <h3 class="text-center"> identifiant BC-S</h3>
+                    <div class="col-auto">
+                        <h3 class="text-center"> identifiant BL.s</h3>
                     </div>
                     <div class="col pl-5">
-                        <button id="createbls" style="" class="btn btn-primary btn-sm ml-5"> Crée Bl sorties</button>
                     </div>
                 </div>
                 <br>
                 <div class="row">
                     <div class="col ml-4">
-                        <label for="idbcs">identifiant :</label>
-                        <input type="text" id="idbcs" class="form-control-plaintext w-75 text-center" disabled>
+                        <label for="idbls">identifiant :</label>
+                        <input type="text" id="idbls" class="form-control-plaintext w-75 text-center" disabled>
                         <label for="datec">date de commande :</label>
                         <input type="date" id="datec" class="form-control datepicker" data-date-format="mm/yyyy/dd">
                         <!--<input type="date" id="datec" class="form-control w-75 text-center">-->
@@ -110,7 +110,7 @@
                     <div class="col">
                         <label for="codm">code UM :</label>
                         <input type="text" id="codm" class="form-control-plaintext w-75 text-center" disabled>
-                        <label for="ncom">n° commande :</label>
+                        <label for="ncom">numéro Bl :</label>
                         <input type="text" id="ncom" class="form-control w-75 text-center">
                         <br>
                         <label for="transsel">transporteur :</label>
@@ -134,7 +134,12 @@
                         </select>
                         <br>
                         <br>
-                        <form action="/upload_bcsf/?" method="POST" enctype="multipart/form-data" class="form-horizontal">
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col"> </div>
+                        <div class="col">
+                            <form action="/upload_blsf/?" method="POST" enctype="multipart/form-data" class="form-horizontal">
                             {% csrf_token %}
                             <div class="form-group">
                                 <p>fichier <i style="cursor: pointer;" class="fa fa-file" id="fichpop"></i></p>
@@ -142,7 +147,7 @@
                                     <input type="file" name="file" id="file" required="True" class="form-control-file">
                                 </div>
                             </div>
-                            {% for items in bcs %}
+                            {% for items in sortie %}
                             {% if items.idBonCommandeSortie == id%}
                             {% if items.fichier %}
                             <img id="imgfichier" src="{{ items.fichier.url }}" >
@@ -152,7 +157,7 @@
                                 $('#fichpop').click(function () {
                                     var src = $('#imgfichier').attr('src');
                                     $('<div>').css({
-                                        background: 'RGBA(0,0,0,.5) url('+src+') no-repeat center', // .5 rends à moitié "transparent" car le 4 paramètre est = a l'opacité de la couleur
+                                        background: 'RGBA(0,0,0,.5) url('+src+') no-repeat center',
                                         backgroundSize: 'contain',
                                         width:'100%', height:'100%',
                                         position:'fixed',
@@ -176,6 +181,7 @@
                             </div>
                             <input type="text" hidden value="{{ id }}" name="idinput" id="idinput">
                         </form>
+                    </div>
                     </div>
                 </div>
                 <br>
@@ -234,12 +240,9 @@
                         </tfoot>
                     </table>
                 </div>
-            </div>
         </div>
-
-
+            </div>
     </div>
-</div>
 </div>
 
 <div class="container text-center" style="width: 100%;">
@@ -275,11 +278,11 @@
                             <th scope="col" class="th-sm"> priorité </th>
                             <th scope="col" class="th-sm"> terminée </th>
                             <th scope="col" class="th-sm"> delete </th>
-                            <th scope="col" class="th-sm"> ID.Ligne bcs </th>
+                            <th scope="col" class="th-sm"> ID.Ligne bls </th>
                         </tr>
                         </thead>
                         <tbody>
-                        {% for items in lbcs %}
+                        {% for items in sortieligne %}
                         {% if items.fk_BonCommandeSortie.idBonCommandeSortie|safe == id %}
                         <tr class="">
                             <!--<td> <button type="button" id='{{ items.idBonCommandeSortie }}' class="dyna btn btn-sm btn-outline-grey rounded"> <i class="fa fa-arrow-right"></i> </button></td>-->
@@ -331,7 +334,7 @@
                             <th> priorité </th>
                             <th> terminée </th>
                             <th> delete </th>
-                            <th> ID.Ligne bcs </th>
+                            <th> ID.Ligne bls </th>
                         </tr>
                         </tfoot>
                     </table>
@@ -339,36 +342,10 @@
                 <button type="button" id="recalculate" class="btn btn-default btn-rounded btn-outline-dark">Re-Calculer &nbsp; <i class="fas fa-cogs"></i></button>
             </div>
         </div>
-        <div class="col">
-            <div class="border shadow-lg p-3 mb-5 bg-white rounded">
-                <div class="table-responsive">
-                    <h4 class="text-center"><b>Bons de livraison sortie</b></h4>
-                    <table id="blstab" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
-                        <thead>
-                        <tr>
-                            <th scope="col" class="th-sm"> </th>
-                            <th scope="col" class="th-sm"> N° BL </th>
-                            <th scope="col" class="th-sm"> date création </th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        {% for items in bls %}
-                        {% if items.fk_BonCommandeSortie.idBonCommandeSortie == id %}
-                        <tr>
-                            <td> <a href='{% url "bonLivraisonSortiemodify" %}?id={{items.fk_BonCommandeSortie.idBonCommandeSortie|safe }}'><button type="button" id='{{ items.idBonCommandeSortie }}' class="dyna btn btn-sm btn-outline-grey rounded"> <i class="fa fa-arrow-right"></i> </button></a></td>
-                            <td> {{ items.fk_BonCommandeSortie.idBonCommandeSortie }} </td>
-                            <td> {{ items.fk_BonCommandeSortie.c_horodatage }} </td>
-                        </tr>
-                        {% endif %}
-                        {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
     </div>
 </div>
 </body>
+
 <script type="text/javascript">
     $(document).ready(function () {
         $('#dtBasicExample').DataTable();
@@ -378,7 +355,7 @@
         $('#boncommandesortie').fadeTo("slow", 0.5);
 
         $('#back-row').click(function () {
-            location.href = "{% url 'bonCommandeSortie' %}";
+            location.href = "{% url 'bonLivraisonSortie' %}";
         });
         $('#createbls').click(function () {
             if (window.confirm("\"Vous allez créer le BLs à partir des UM sorties ?")) {
@@ -386,7 +363,7 @@
                     type: "POST",    //type de requête utilisé par ajax
                     url: "/bon_sortie/modify/creebls/", //lien de la view qui gère la requête post pour delete les lignes du bl
                     data: {
-                        'idbcs': $('#idbcs').val().trim(),
+                        'idbls': $('#idbls').val().trim(),
                         'transporteur': $('#transsel').val().trim(),
                         'destinataire': $('#destinataire').val().trim(),
                         csrfmiddlewaretoken: '{{ csrf_token }}',
@@ -406,15 +383,16 @@
         $('#transsel').val("");
         $('#destinataire').val("");
 
-        '{% for items in bcs %}'
-        if ('{{ items.idBonCommandeSortie}}' == '{{ id }}') {
-            $('#idbcs').val('{{ items.idBonCommandeSortie }}');
-            $('#codm').val('{{ items.fk_Destinataire.codeUM }}');
-            $('#ncom').val('{{ items.numeroCommande }}');
-            $('#datec').val('{{ items.dateCommande }}');
-            $('#client').val('{{ items.fk_Client.nom }}');
-            $('#transsel').val('{{ items.fk_Transporteur.nom }}');
-            $('#destinataire').val('{{ items.fk_Destinataire.nom }}');
+        '{% for items in sortie %}'
+        if ('{{ items.idBonLivraisonSortie }}' == '{{ id }}') {
+            console.log("there {{ items.dateImpression }}");
+            $('#idbls').val('{{ items.idBonLivraisonSortie }}');
+            $('#codm').val('{{ items.fk_BonCommandeSortie.fk_Destinataire.codeUM }}');
+            $('#datec').val('{{ items.dateImpression }}');
+            $('#ncom').val('{{ items.numeroBonLivraison }}');
+            $('#client').val('{{ items.fk_BonCommandeSortie.fk_Client.nom }}');
+            $('#transsel').val('{{ items.fk_BonCommandeSortie.fk_Transporteur.nom }}');
+            $('#destinataire').val('{{ items.fk_BonCommandeSortie.fk_Destinataire.nom }}');
         }
         '{% endfor %}'
 
@@ -427,82 +405,9 @@
             $("#transsel").toggle();
         });
 
-        $('.prodaliv').change(function () {
-            if (parseInt($(this).val()) == parseInt($(this).closest('td').parent().find('td').eq(6).text())) {
-                console.log("gg  " + $(this).closest('td').parent().find('td').eq(6).text());
-            } else {
-                console.log("no gg " + $(this).closest('td').parent().find('td').eq(6).text());
-            }
-            $(this).closest('td').parent().find('td').eq(5).text(parseInt($(this).val()) - parseInt($(this).closest('td').parent().find('td').eq(6).text()));
-        });
         $("#create-row").click(function() {
-            location.href = "{% url 'bonCommandeSortieadd' %}";
+            location.href = "{% url 'bonLivraisonSortieadd' %}";
         });
-
-        $('#recalculate').click(function () {
-            var codcli = 0;
-            var desicl = 0;
-            var qtecom = 0;
-            var qtecol = 0;
-            var qteatt = 0;
-            var diff = 0;
-            var idligne = 0;
-            $('#dtBasicExample tr').each(function (a, b) {  //recupère les  entrée dans la table
-                if (a === 0 || a === 1) {
-                    // Je ne prends pas en compte le "thead".
-                }
-                else {
-                    $(this).find('td').each(function(a, b) {
-                        if (a === 0) {
-                            codcli = $(this).text().trim();
-                        }
-                        if (a === 1) {
-                            desicl = $(this).text().trim();
-                        }
-                        if (a === 2) {
-                            qtecom = $(this).text().trim();
-                        }
-                        if (a === 3) {
-                            qtecol = $(this).text().trim();
-                        }
-                        if (a === 4) {
-                            qteatt = $(this).find('input').val().trim();
-                        }
-                        if (a === 5) {
-                            diff = $(this).text().trim();
-                        }
-                        if (a === 14) {
-                            idligne = $(this).text().trim();
-                        }
-                    });
-                    console.log($('#idbcs').val() + codcli + desicl + " " + qtecom + " " + qtecol + " " + qteatt + " " + diff);
-                    $.ajax({
-                        type: "POST",    //type de requête utilisé par ajax
-                        url: "/bon_sortie/modify/recalcule/", //lien de la view qui gère la requête post pour delete les lignes du bl
-                        data: {
-                            'idbcs' : $('#ncom').val(),
-                            'codecli': codcli,
-                            'desicl': desicl,
-                            'qtecom': qtecom,
-                            'qtecol': qtecol,
-                            'qteatt': qteatt,
-                            'diff': diff,
-                            'idligne': idligne,
-                            csrfmiddlewaretoken: '{{ csrf_token }}',
-                        },
-                        success: function (msg, data, settings) {
-                            console.log("gg " + msg);
-                            //location.reload();
-                        },
-                        failure: function () {
-                            console.log("fail");
-                        }
-                    });
-                    //$(this).remove();
-                }
-            });
-        });
-
     });
 </script>
 {% endblock %}
