--- a/djangoproject/gestion_stock/templates/bonLivraisonSortiemodify.html
+++ b/djangoproject/gestion_stock/templates/bonLivraisonSortiemodify.html
@@ -105,7 +105,6 @@
                                 });
                             </script>
                         </select>
-
                     </div>
                     <div class="col">
                         <label for="codm">code UM :</label>
@@ -134,21 +133,25 @@
                         </select>
                         <br>
                         <br>
+                        <label for="idbcs">Bon de Commande :</label>
+                        <input type="text" id="idbcs" class="form-control-plaintext w-75 text-center" disabled>
                     </div>
                     <br>
-                    <div class="row">
-                        <div class="col"> </div>
-                        <div class="col">
-                            <form action="/upload_blsf/?" method="POST" enctype="multipart/form-data" class="form-horizontal">
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col"></div>
+                    <div class="col-auto">
+                        <form action="/upload_blsf/?" method="POST" enctype="multipart/form-data" class="form-horizontal">
                             {% csrf_token %}
                             <div class="form-group">
-                                <p>fichier <i style="cursor: pointer;" class="fa fa-file" id="fichpop"></i></p>
+                                <p class="ml-3">fichier <i style="cursor: pointer;" class="fa fa-file" id="fichpop"></i></p>
                                 <div class="col-auto">
                                     <input type="file" name="file" id="file" required="True" class="form-control-file">
                                 </div>
                             </div>
                             {% for items in sortie %}
-                            {% if items.idBonCommandeSortie == id%}
+                            {% if items.idBonLivraisonSortie == id %}
                             {% if items.fichier %}
                             <img id="imgfichier" src="{{ items.fichier.url }}" >
                             <script>
@@ -182,7 +185,7 @@
                             <input type="text" hidden value="{{ id }}" name="idinput" id="idinput">
                         </form>
                     </div>
-                    </div>
+                    <div class="col"></div>
                 </div>
                 <br>
             </div>
@@ -206,7 +209,8 @@
                         </thead>
                         <tbody>
                         {% for items in ums %}
-                        {% if items.fk_BonCommandeSortie.idBonCommandeSortie == id %}
+                        {% if items.fk_BonLivraisonSortie.idBonLivraisonSortie == id %}
+                        azeaz
                         <tr>
                             <td> <a href='{% url "unitemanutentionsortiemodify" %}?id={{items.idUniteManutentionSortie|safe }}'><button type="button" id='{{ items.idUniteManutentionSortie }}' class="dyna btn btn-sm btn-outline-grey rounded"> <i class="fa fa-arrow-right"></i> </button></a></td>
 
@@ -240,80 +244,39 @@
                         </tfoot>
                     </table>
                 </div>
-        </div>
             </div>
+        </div>
     </div>
 </div>
 
-<div class="container text-center" style="width: 100%;">
+<div class="container text-center">
     <div class="row">
-        <div class="col-auto">
+        <div class="col">
             <div class="border shadow-lg p-3 mb-5 bg-white rounded">
                 <div class="table-responsive">
-                    <h4 class="text-center"><b>Lignes bon de commande sortie</b></h4>
+                    <h4 class="text-center"><b>Lignes du bon de livraison sortie</b></h4>
                     <table id="dtBasicExample" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
                         <thead>
                         <tr>
-                            <th></th>
-                            <th></th>
-                            <th></th>
-                            <th></th>
-                            <th></th>
-                            <th></th>
-                            <th colspan="2">qte attribuée<br>par le système</th>
-                        </tr>
-                        <tr>
                             <!--<th scope="col" class="th-sm"> modify </th>-->
+                            <th scope="col" class="th-sm"> code fournisseur </th>
                             <th scope="col" class="th-sm"> code client </th>
-                            <th scope="col" class="th-sm"> désignation </th>
-                            <th scope="col" class="th-sm"> qte commandée </th>
+                            <th scope="col" class="th-sm"> désignation fournisseur </th>
+                            <th scope="col" class="th-sm"> qte prodits </th>
                             <th scope="col" class="th-sm"> qte colis </th>
-                            <th scope="col" class="th-sm"> qte attribuée </th>
-                            <th scope="col" class="th-sm"> <-diff-> </th>
-                            <th scope="col" class="th-sm"> prod. </th>
-                            <th scope="col" class="th-sm"> colis </th>
-                            <th scope="col" class="th-sm"> <-diff-> </th>
-                            <th scope="col" class="th-sm"> prod. </th>
-                            <th scope="col" class="th-sm"> colis </th>
-                            <th scope="col" class="th-sm"> priorité </th>
-                            <th scope="col" class="th-sm"> terminée </th>
                             <th scope="col" class="th-sm"> delete </th>
-                            <th scope="col" class="th-sm"> ID.Ligne bls </th>
                         </tr>
                         </thead>
                         <tbody>
                         {% for items in sortieligne %}
                         {% if items.fk_BonCommandeSortie.idBonCommandeSortie|safe == id %}
                         <tr class="">
-                            <!--<td> <button type="button" id='{{ items.idBonCommandeSortie }}' class="dyna btn btn-sm btn-outline-grey rounded"> <i class="fa fa-arrow-right"></i> </button></td>-->
                             <td> {{ items.fk_Article.codeClient }} </td>
                             <td> {{ items.fk_Article.designationClient }} </td>
                             <td> {{ items.quantiteProduitCommande }} </td>
                             <td> {{ items.quantiteColisCommande }} </td>
-                            <td class="text-center"> <input class="form-control-plaintext text-center prodaliv" value="{{ items.quantiteProduitALivrer }}"></td>
-                            <td> {{ items.quantiteCommandePotentiel }} </td>
                             <td> {{ items.quantiteProduitLivre }} </td>
-                            <td> {{ items.quantiteColisLivre }} </td>
-                            <td> {{ items.differenceCommandeLivre }} </td>
-                            <td> {{ items.quantiteProduitPotentielle }} </td>
-                            <td> {{ items.quantiteColisPotentielle }} </td>
-                            <td> {{ items.priorite }} </td>
-                            {% if items.termine == '0' %}
-                            <td> <button id='{{ items.idLigneBonCommandeSortie }}' class="termin btn btn-sm btn-outline-grey rounded-pill"> <i class="fa fa-pen"></i></button> </td>
-                            {% else %}
-                            <td> <button id='{{ items.idLigneBonCommandeSortie }}' class="termin btn btn-sm btn-outline-red rounded-pill"> <i class="fa fa-pen"></i></button> </td>
-                            {% endif %}
-                            <td> <button id='{{ items.idLigneBonCommandeSortie }}' class="dynad btn btn-sm btn-outline-red rounded-pill"> <i class="fa fa-minus"></i></button> </td>
-                            <td> {{ items.idLigneBonCommandeSortie }} </td>
-                            <!--<tr>
-                                <td> <button type="button" id='{{ items.idBonCommandeSortie }}' class="dyna btn btn-sm btn-outline-grey rounded"> <i class="fa fa-arrow-right"></i> </button></td>
-                                <td> {{ items.fk_Destinataire.fk_TypeDestinataire.nom }} </td>
-                                <td> {{ items.fk_Destinataire.codeUM }} </td>
-                                <td> {{ items.dateCommande }} </td>
-                                <td> {{ items.numeroCommande }} </td>
-                                <td> {{ items.idBonCommandeSortie }} </td>
-                                <td> {{ items.termine }} </td>
-                                <td> <button id='{{ items.idBonCommandeSortie  }}' class="dynad btn btn-sm btn-outline-grey rounded-pill"> <i class="fa fa-minus"></i>   </button> </td>                            -->
+                            <td> <button id='' class="dynad btn btn-sm btn-outline-red rounded-pill"> <i class="fa fa-minus"></i></button> </td>
                         </tr>
                         {% endif %}
                         {% endfor %}
@@ -321,25 +284,15 @@
                         <tfoot>
                         <tr>
                             <th> code client </th>
-                            <th> désignation </th>
                             <th> qte commandée </th>
                             <th> qte colis </th>
                             <th> qte attribuée </th>
                             <th> <-diff-> </th>
-                            <th> prod. </th>
-                            <th> colis </th>
-                            <th> <-diff-> </th>
-                            <th> prod. </th>
-                            <th> colis </th>
-                            <th> priorité </th>
-                            <th> terminée </th>
-                            <th> delete </th>
                             <th> ID.Ligne bls </th>
                         </tr>
                         </tfoot>
                     </table>
                 </div>
-                <button type="button" id="recalculate" class="btn btn-default btn-rounded btn-outline-dark">Re-Calculer &nbsp; <i class="fas fa-cogs"></i></button>
             </div>
         </div>
     </div>
@@ -393,6 +346,11 @@
             $('#client').val('{{ items.fk_BonCommandeSortie.fk_Client.nom }}');
             $('#transsel').val('{{ items.fk_BonCommandeSortie.fk_Transporteur.nom }}');
             $('#destinataire').val('{{ items.fk_BonCommandeSortie.fk_Destinataire.nom }}');
+            '{% for bons in bcs %}'
+            if ('{{ bons.idBonCommandeSortie }}' == '{{ items.fk_BonCommandeSortie.idBonCommandeSortie }}') {
+                $('#idbcs').val('{{ bons.idBonCommandeSortie }}');
+            }
+            '{% endfor %}'
         }
         '{% endfor %}'
 
